.team section fix color contrast/img alt text

--- a/style/_team.scss
+++ b/style/_team.scss
@@ -12,7 +12,8 @@
         font-weight: 500;
 
         small {
-            color: #eb5757;
+            // color: #eb5757;
+            color: #AD1414;
             font-size: 18px;
         }
 
@@ -64,7 +65,8 @@
             gap: .5rem;
     
             small {
-                color: #eb5757;
+                // color: #eb5757;
+                color: #AD1414;
                 font-size: 18px;
             }
     
