--- a/style/style.css
+++ b/style/style.css
@@ -499,7 +499,7 @@ form .emailbox #submit {
   font-weight: 500;
 }
 .team .meet small {
-  color: #eb5757;
+  color: #AD1414;
   font-size: 18px;
 }
 .team .meet h2 {
@@ -544,7 +544,7 @@ form .emailbox #submit {
     gap: 0.5rem;
   }
   .team .meet small {
-    color: #eb5757;
+    color: #AD1414;
     font-size: 18px;
   }
   .team .meet h2 {
